Add hero, advantages, video, studios, promo blocks

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,4 +1,17 @@
 <section class="hero">
-    <h1>123</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora natus cumque explicabo laudantium dolorem quae libero ut laboriosam unde deserunt fugiat alias veritatis repellendus, modi, nobis ratione voluptates iure? Quaerat!</p>
+    <div class="hero__container container">
+        <div class="hero__wrapper">
+            <span class="hero__subtitle">Exclusive model</span>
+            <span class="hero__title">Мечтаешь<br>о карьере модели?</span>
+            <span class="hero__text">Зарабатывай от 80 000 рублей,<br>благодаря своей внешности</span>
+            <a href="#" class="gradient-button hero__button">
+                <span class="gradient-button__text">Заполнить анкету</span>
+            </a>
+            <div class="hero__social social">
+                <div class="social__elem">@@include('../images/vector/tik-tok.svg')</div>
+                <div class="social__elem">@@include('../images/vector/instagram.svg')</div>
+                <div class="social__elem">@@include('../images/vector/telegram.svg')</div>
+            </div>
+        </div>
+    </div>
 </section>
