--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,12 +1,27 @@
 <header class="header">
-    <div class="header__container container">
-        <h1 class="header__title">Exclusive Model</h1>
+    <div class="header__wrapper">
+        <div class="header__container container">
+            <div class="header__logo logo">
+                @@include('../images/vector/logo.svg')
+            </div>
+            <nav class="header__menu menu">
+                <ul class="menu__list">
+                    <li class="menu__elem"><a href="#" class="menu__link">О студии</a></li>
+                    <li class="menu__elem"><a href="#" class="menu__link">FAQ</a></li>
+                    <li class="menu__elem"><a href="#" class="menu__link">Вакансии</a></li>
+                    <li class="menu__elem"><a href="#" class="menu__link">Галерея</a></li>
+                    <li class="menu__elem"><a href="#" class="menu__link">Блог</a></li>
+                    <li class="menu__elem"><a href="#" class="menu__link">Контакты</a></li>
+                </ul>
+            </nav>
+            <a href="tel:88009999000" class="gradient-button header__button">
+                <span class="gradient-button__text">8-800-999-90-00</span>
+            </a>
+            <button class="header__burger-button burger-button">
+                <div class="burger-button__line"></div>
+                <div class="burger-button__line"></div>
+                <div class="burger-button__line"></div>
+            </button>
+        </div>
     </div>
-
-    <div class="wrapper">
-        <a href="#" class="gradient-button">
-            <span class="gradient-button__text">Заполнить анкету</span>
-        </a>
-    </div>
-    
 </header>
