--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     @@include('html/header.html', {})
     <main class="main">
       @@include('html/hero.html', {})
+      @@include('html/advantages.html', {})
+      @@include('html/calculator.html', {})
+      @@include('html/video.html', {})
+      @@include('html/studios.html', {})
+      @@include('html/promo.html', {})
+      @@include('html/benefits.html', {})
+      @@include('html/feedback.html', {})
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
