--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -1,3 +1,31 @@
-<section class="calculator">
-    <h1>Calculator</h1>
+<section class="benefits">
+    <div class="benefits__container container">
+        <h2 class="section-title">Преимущества работы</h2>
+        <div class="benefits__grid">
+            <div class="benefits__elem benefit">
+                <h3 class="benefit__title">1<span class="benefit__dot dot">.</span> Гибкий график работы</h3>
+                <p class="benefit__text">Даём возможность начинать рабочий день в удобное для тебя время.</p>
+            </div>
+            <div class="benefits__elem benefit">
+                <h3 class="benefit__title">2<span class="benefit__dot dot">.</span> Высокий доход</h3>
+                <p class="benefit__text">Постоянная возможность зарабатывать больше.</p>
+            </div>
+            <div class="benefits__elem benefit">
+                <h3 class="benefit__title">3<span class="benefit__dot dot">.</span> Дизайнерские интерьеры</h3>
+                <p class="benefit__text">Стильные комнаты, в которых приятноработать.</p>
+            </div>
+            <div class="benefits__elem benefit">
+                <h3 class="benefit__title">4<span class="benefit__dot dot">.</span> Возможно совмещать с учёбой</h3>
+                <p class="benefit__text">Даём возможность начинать рабочий день в удобное для тебя время.</p>
+            </div>
+            <div class="benefits__elem benefit">
+                <h3 class="benefit__title">5<span class="benefit__dot dot">.</span> Обеды</h3>
+                <p class="benefit__text">У тебя всегда будет время на отдых, а о твоём питании позаботимся мы.</p>
+            </div>
+            <div class="benefits__elem benefit">
+                <h3 class="benefit__title">6<span class="benefit__dot dot">.</span> Отдельные комнаты</h3>
+                <p class="benefit__text">Комфортная обстановка, где никто тебе не помешает.</p>
+            </div>
+        </div>
+    </div>
 </section>
