--- a/src/html/calculator.html
+++ b/src/html/calculator.html
@@ -1,3 +1,65 @@
 <section class="calculator">
-    <h1>Calculator</h1>
+    <div class="calculator__container container">
+        <div class="calculator__left">
+            <div class="calculator__checkbox-elem">
+                <span class="calculator__checkbox-title">Дней в неделю</span>
+                <div class="calculator__checkboxes">
+                    <a href="#" class="gradient-button gradient-button_active calculator__checkbox">
+                        <span class="gradient-button__text">4</span>
+                    </a>
+                    <a href="#" class="gradient-button calculator__checkbox">
+                        <span class="gradient-button__text">5</span>
+                    </a>
+                    <a href="#" class="gradient-button calculator__checkbox">
+                        <span class="gradient-button__text">6</span>
+                    </a>
+                </div>
+            </div>
+            <div class="calculator__checkbox-elem">
+                <span class="calculator__checkbox-title">Часов в день</span>
+                <div class="calculator__checkboxes">
+                    <div class="calculator__checkbox">6</div>
+                    <div class="calculator__checkbox">7</div>
+                    <div class="calculator__checkbox">8</div>
+                </div>
+            </div>
+            <div class="calculator__checkbox-elem">
+                <span class="calculator__checkbox-title">Доход за</span>
+                <div class="calculator__checkboxes">
+                    <div class="calculator__checkbox">Неделю</div>
+                    <div class="calculator__checkbox">Месяц</div>
+                    <div class="calculator__checkbox">Год</div>
+                </div>
+            </div>
+            <span class="calculator__total">~40 000₽</span>
+            <a href="#" class="gradient-button gradient-button_active calculator__button">
+                <span class="gradient-button__text">Заполнить анкету</span>
+            </a>
+        </div>
+        <div class="calculator__right">
+            <h3 class="calculator__title">Посчитай, сколько ты заработаешь</h3>
+            <p class="calculator__text">Посчитано на основе реальной статистики доходов наших девушек за последний год.</p>
+            <span class="calculator__text_bold"></span>
+            <ul class="calculator__list">
+                <li class="calculator__list-elem">
+                    <div class="calculator__list-icon">
+                        @@include('../images/vector/check-gradient.svg')
+                    </div>
+                    <span class="calculator__list-text">Путешествие мечты</span>
+                </li>
+                <li class="calculator__list-elem">
+                    <div class="calculator__list-icon">
+                        @@include('../images/vector/check-gradient.svg')
+                    </div>
+                    <span class="calculator__list-text">Новый IPhone</span>
+                </li>
+                <li class="calculator__list-elem">
+                    <div class="calculator__list-icon">
+                        @@include('../images/vector/check-gradient.svg')
+                    </div>
+                    <span class="calculator__list-text">Дорогие подарки и украшения</span>
+                </li>
+            </ul>
+        </div>
+    </div>
 </section>
