--- a/src/html/calculator.html
+++ b/src/html/calculator.html
@@ -18,17 +18,29 @@
             <div class="calculator__checkbox-elem">
                 <span class="calculator__checkbox-title">Часов в день</span>
                 <div class="calculator__checkboxes">
-                    <div class="calculator__checkbox">6</div>
-                    <div class="calculator__checkbox">7</div>
-                    <div class="calculator__checkbox">8</div>
+                    <a href="#" class="gradient-button gradient-button_active calculator__checkbox">
+                        <span class="gradient-button__text">6</span>
+                    </a>
+                    <a href="#" class="gradient-button calculator__checkbox">
+                        <span class="gradient-button__text">7</span>
+                    </a>
+                    <a href="#" class="gradient-button calculator__checkbox">
+                        <span class="gradient-button__text">8</span>
+                    </a>
                 </div>
             </div>
             <div class="calculator__checkbox-elem">
                 <span class="calculator__checkbox-title">Доход за</span>
                 <div class="calculator__checkboxes">
-                    <div class="calculator__checkbox">Неделю</div>
-                    <div class="calculator__checkbox">Месяц</div>
-                    <div class="calculator__checkbox">Год</div>
+                    <a href="#" class="gradient-button gradient-button_active calculator__checkbox">
+                        <span class="gradient-button__text">Неделю</span>
+                    </a>
+                    <a href="#" class="gradient-button calculator__checkbox">
+                        <span class="gradient-button__text">Месяц</span>
+                    </a>
+                    <a href="#" class="gradient-button calculator__checkbox">
+                        <span class="gradient-button__text">Год</span>
+                    </a>
                 </div>
             </div>
             <span class="calculator__total">~40 000₽</span>
@@ -39,7 +51,7 @@
         <div class="calculator__right">
             <h3 class="calculator__title">Посчитай, сколько ты заработаешь</h3>
             <p class="calculator__text">Посчитано на основе реальной статистики доходов наших девушек за последний год.</p>
-            <span class="calculator__text_bold"></span>
+            <span class="calculator__text calculator__text_bold">С такой зарплатой ты быстро сможешь накопить на: </span>
             <ul class="calculator__list">
                 <li class="calculator__list-elem">
                     <div class="calculator__list-icon">
