--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,19 @@
 <footer class="footer">
-    <div class="container">
-        Content
+    <div class="footer_container container">
+        <div class="footer__logo logo">
+            @@include('../images/vector/logo.svg')
+        </div>
+        <nav class="footer__menu menu">
+            <ul class="menu__list">
+                <li class="menu__elem"><a href="#" class="menu__link">О студии</a></li>
+                <li class="menu__elem"><a href="#" class="menu__link">FAQ</a></li>
+                <li class="menu__elem"><a href="#" class="menu__link">Вакансии</a></li>
+                <li class="menu__elem"><a href="#" class="menu__link">Галерея</a></li>
+                <li class="menu__elem"><a href="#" class="menu__link">Блог</a></li>
+                <li class="menu__elem"><a href="#" class="menu__link">Контакты</a></li>
+            </ul>
+        </nav>
+        <p class="footer__text">Студия EXCLUSIVE MODEL не предоставляет и не является посредником в предоставлении услуг интимного характера. Все общение виртуально и несет исключительно развлекательный характер. Для лиц старше 18 лет.</p>
+        <p class="footer__text">© 2012-2023 EXCLUSIVE MODEL | <a class="footer__link">Политика конфиденциальности</a></p>
     </div>
 </footer>
