--- a/src/html/calculator.html
+++ b/src/html/calculator.html
@@ -4,13 +4,13 @@
             <div class="calculator__checkbox-elem">
                 <span class="calculator__checkbox-title">Дней в неделю</span>
                 <div class="calculator__checkboxes">
-                    <a href="#" class="gradient-button gradient-button_active calculator__checkbox">
+                    <a href="#" data-days="4" class="gradient-button gradient-button_active calculator__checkbox">
                         <span class="gradient-button__text">4</span>
                     </a>
-                    <a href="#" class="gradient-button calculator__checkbox">
+                    <a href="#" data-days="5" class="gradient-button calculator__checkbox">
                         <span class="gradient-button__text">5</span>
                     </a>
-                    <a href="#" class="gradient-button calculator__checkbox">
+                    <a href="#" data-days="6" class="gradient-button calculator__checkbox">
                         <span class="gradient-button__text">6</span>
                     </a>
                 </div>
@@ -18,13 +18,13 @@
             <div class="calculator__checkbox-elem">
                 <span class="calculator__checkbox-title">Часов в день</span>
                 <div class="calculator__checkboxes">
-                    <a href="#" class="gradient-button gradient-button_active calculator__checkbox">
+                    <a href="#" data-hours="6" class="gradient-button gradient-button_active calculator__checkbox">
                         <span class="gradient-button__text">6</span>
                     </a>
-                    <a href="#" class="gradient-button calculator__checkbox">
+                    <a href="#" data-hours="7" class="gradient-button calculator__checkbox">
                         <span class="gradient-button__text">7</span>
                     </a>
-                    <a href="#" class="gradient-button calculator__checkbox">
+                    <a href="#" data-hours="8" class="gradient-button calculator__checkbox">
                         <span class="gradient-button__text">8</span>
                     </a>
                 </div>
@@ -32,18 +32,18 @@
             <div class="calculator__checkbox-elem">
                 <span class="calculator__checkbox-title">Доход за</span>
                 <div class="calculator__checkboxes">
-                    <a href="#" class="gradient-button gradient-button_active calculator__checkbox">
+                    <a href="#" data-period="1" class="gradient-button gradient-button_active calculator__checkbox">
                         <span class="gradient-button__text">Неделю</span>
                     </a>
-                    <a href="#" class="gradient-button calculator__checkbox">
+                    <a href="#" data-period="4" class="gradient-button calculator__checkbox">
                         <span class="gradient-button__text">Месяц</span>
                     </a>
-                    <a href="#" class="gradient-button calculator__checkbox">
+                    <a href="#" data-period="52" class="gradient-button calculator__checkbox">
                         <span class="gradient-button__text">Год</span>
                     </a>
                 </div>
             </div>
-            <span class="calculator__total">~40 000₽</span>
+            <span class="calculator__total">~24 000₽</span>
             <a href="#" class="gradient-button gradient-button_active calculator__button">
                 <span class="gradient-button__text">Заполнить анкету</span>
             </a>
