--- a/src/html/feedback.html
+++ b/src/html/feedback.html
@@ -24,7 +24,7 @@
                 </li>
             </ul>
             <div class="feedback__image-wrapper">
-                <img src="../images/feedback.png" class="feedback__image">
+                <img src="images/feedback.png" class="feedback__image">
             </div>
             <div class="feedback__decor">
                 @@include('../images/vector/devor-line.svg')
