--- a/src/html/promo.html
+++ b/src/html/promo.html
@@ -1,12 +1,12 @@
 <section class="promo">
-    <div class="container">
+    <div class="promo__container container">
         <div class="promo__wrapper">
             <h2 class="promo__title">Приведи подругу<br>и получи</h2>
             <span class="promo__price">18 000₽</span>
             <a href="#" class="gradient-button promo__button">
                 <span class="gradient-button__text">Оставить заявку</span>
             </a>
-            <img class="promo__img" src="../images/notebook.png">
+            <img class="promo__img" src="images/notebook.png">
         </div>
     </div>
 </section>
