--- a/src/html/studios.html
+++ b/src/html/studios.html
@@ -5,19 +5,19 @@
                 <h2 class="studio__title section-title">Наши студии</h2>
                 <span class="studios__text">Мы заботимся о комфорте наших моделей, именно поэтому все комнаты оборудованы идеальными рабочими местами, компьютерами последнего поколения, профессиональным освещением, LED подсветкой и камерами Brio</span>
             </div>
-            <div class="studios__card studio-card" style="background-image: url('../images/studio1.png');">
+            <div class="studios__card studio-card" style="background-image: url('images/studio1.png');">
                 <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Москва</h3>
             </div>
-            <div class="studios__card studio-card" style="background-image: url('../images/studio2.png');">
+            <div class="studios__card studio-card" style="background-image: url('images/studio2.png');">
                 <h3 class="studio-card__title">2<span class="studio-card__dot dot">.</span> Новосибирск</h3>
             </div>
-            <div class="studios__card studio-card" style="background-image: url('../images/studio3.png');">
+            <div class="studios__card studio-card" style="background-image: url('images/studio3.png');">
                 <h3 class="studio-card__title">3<span class="studio-card__dot dot">.</span> Калининград</h3>
             </div>
-            <div class="studios__card studio-card" style="background-image: url('../images/studio4.png');">
+            <div class="studios__card studio-card" style="background-image: url('images/studio4.png');">
                 <h3 class="studio-card__title">4<span class="studio-card__dot dot">.</span> Санкт-петербург</h3>
             </div>
-            <div class="studios__card studio-card" style="background-image: url('../images/studio5.png');">
+            <div class="studios__card studio-card" style="background-image: url('images/studio5.png');">
                 <h3 class="studio-card__title">5<span class="studio-card__dot dot">.</span> Омск</h3>
             </div>
             <div class="studios__card studio-card studio-card_more">
