--- a/src/about.html
+++ b/src/about.html
@@ -8,7 +8,9 @@
     <main class="main">
       @@include('html/about.html', {})
       @@include('html/why.html', {})
-      @@include('html/map.html', {})
+      @@include('html/map.html', {
+        'number': '/02'
+      })
       @@include('html/equipment.html', {})
       @@include('html/feedback.html', {})
     </main>
