--- a/src/html/calculator.html
+++ b/src/html/calculator.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <span class="calculator__total">~24 000₽</span>
-            <a href="#" class="gradient-button gradient-button_active calculator__button">
+            <a href="#feedback" class="gradient-button gradient-button_active calculator__button">
                 <span class="gradient-button__text">Заполнить анкету</span>
             </a>
         </div>
