--- a/src/html/equipment.html
+++ b/src/html/equipment.html
@@ -11,8 +11,8 @@
                 </div>
                 <div class="equipment-card__content">
                     <div class="equipment-card__title-wrapper">
-                        <h2 class="equipment-card__title">Мощные компьютеры</h2>
-                        <button class="equipment-card__button"></button>
+                        <h2 class="equipment-card__title">Мощные<br>компьютеры</h2>
+                        <button class="equipment-card__button accordion-button"></button>
                     </div>
                     <p class="equipment-card__text">
                         Каждое рабочее место оборудовано мощными ПК, которые обеспечивают комфортную и быструю работу. 8-ядерные процессоры последнего поколения, 16гб ОЗУ для работы сразу на нескольких площадках без зависаний, 2К мониторы для качественной картинки, от которой не устают глаза.
@@ -25,8 +25,8 @@
                 </div>
                 <div class="equipment-card__content">
                     <div class="equipment-card__title-wrapper">
-                        <h2 class="equipment-card__title">Быстрый интернет</h2>
-                        <button class="equipment-card__button"></button>
+                        <h2 class="equipment-card__title">Быстрый<br>интернет</h2>
+                        <button class="equipment-card__button accordion-button"></button>
                     </div>
                     <p class="equipment-card__text">
                         Каждое рабочее место оборудовано мощными ПК, которые обеспечивают комфортную и быструю работу. 8-ядерные процессоры последнего поколения, 16гб ОЗУ для работы сразу на нескольких площадках без зависаний, 2К мониторы для качественной картинки, от которой не устают глаза.
@@ -39,8 +39,8 @@
                 </div>
                 <div class="equipment-card__content">
                     <div class="equipment-card__title-wrapper">
-                        <h2 class="equipment-card__title">Камеры UHD и VR</h2>
-                        <button class="equipment-card__button"></button>
+                        <h2 class="equipment-card__title">Камеры<br>UHD и VR</h2>
+                        <button class="equipment-card__button accordion-button"></button>
                     </div>
                     <p class="equipment-card__text">
                         Каждое рабочее место оборудовано мощными ПК, которые обеспечивают комфортную и быструю работу. 8-ядерные процессоры последнего поколения, 16гб ОЗУ для работы сразу на нескольких площадках без зависаний, 2К мониторы для качественной картинки, от которой не устают глаза.
@@ -53,8 +53,8 @@
                 </div>
                 <div class="equipment-card__content">
                     <div class="equipment-card__title-wrapper">
-                        <h2 class="equipment-card__title">Рабочее место</h2>
-                        <button class="equipment-card__button"></button>
+                        <h2 class="equipment-card__title">Рабочее<br>место</h2>
+                        <button class="equipment-card__button accordion-button"></button>
                     </div>
                     <p class="equipment-card__text">
                         Каждое рабочее место оборудовано мощными ПК, которые обеспечивают комфортную и быструю работу. 8-ядерные процессоры последнего поколения, 16гб ОЗУ для работы сразу на нескольких площадках без зависаний, 2К мониторы для качественной картинки, от которой не устают глаза.
