--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -4,13 +4,13 @@
             <span class="hero__subtitle">Exclusive model</span>
             <span class="hero__title">Мечтаешь<br>о карьере модели?</span>
             <span class="hero__text">Зарабатывай от 80 000 рублей,<br>благодаря своей внешности</span>
-            <a href="#" class="gradient-button hero__button">
+            <a href="#feedback" class="gradient-button hero__button">
                 <span class="gradient-button__text">Заполнить анкету</span>
             </a>
             <div class="hero__social social">
-                <div class="social__elem">@@include('../images/vector/tik-tok.svg')</div>
-                <div class="social__elem">@@include('../images/vector/instagram.svg')</div>
-                <div class="social__elem">@@include('../images/vector/telegram.svg')</div>
+                <a href="https://wa.me/79139030572" class="social__elem">@@include('../images/vector/whatsapp.svg')</ф>
+                <!--<a href=""  class="social__elem">@@include('../images/vector/instagram.svg')</a>-->
+                <a href="https://t.me/exclusive_m0del"  class="social__elem">@@include('../images/vector/telegram.svg')</a>
             </div>
         </div>
     </div>
