--- a/src/html/promo.html
+++ b/src/html/promo.html
@@ -3,7 +3,7 @@
         <div class="promo__wrapper">
             <h2 class="promo__title">Приведи подругу<br>и получи</h2>
             <span class="promo__price">18 000₽</span>
-            <a href="#" class="gradient-button promo__button">
+            <a href="#feedback" class="gradient-button promo__button">
                 <span class="gradient-button__text">Оставить заявку</span>
             </a>
             <img class="promo__img" src="images/notebook.png">
