--- a/src/html/studios.html
+++ b/src/html/studios.html
@@ -20,9 +20,9 @@
             <div class="studios__card studio-card" style="background-image: url('images/studio5.png');">
                 <h3 class="studio-card__title">5<span class="studio-card__dot dot">.</span> Омск</h3>
             </div>
-            <div class="studios__card studio-card studio-card_more">
+            <a href="/gallery.html" class="studios__card studio-card studio-card_more">
                 <span class="studio-card__text">Смотреть все</span>
-            </div>
+            </a>
         </div>
     </div>
 </section>
