--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,23 +1,25 @@
 <header class="header">
     <div class="header__wrapper">
         <div class="header__container container">
-            <div class="header__logo logo">
+            <a href="/" class="header__logo logo">
                 @@include('../images/vector/logo.svg')
-            </div>
+            </a>
             <nav class="header__menu menu">
                 <ul class="menu__list">
-                    <li class="menu__elem"><a href="#" class="menu__link">О студии</a></li>
-                    <li class="menu__elem"><a href="#" class="menu__link">FAQ</a></li>
-                    <li class="menu__elem"><a href="#" class="menu__link">Вакансии</a></li>
-                    <li class="menu__elem"><a href="#" class="menu__link">Галерея</a></li>
-                    <li class="menu__elem"><a href="#" class="menu__link">Блог</a></li>
-                    <li class="menu__elem"><a href="#" class="menu__link">Контакты</a></li>
+                    <li class="menu__elem"><a href="about.html" class="menu__link">О студии</a></li>
+                    <li class="menu__elem"><a href="job.html" class="menu__link">Вакансии</a></li>
+                    <li class="menu__elem"><a href="gallery.html" class="menu__link">Галерея</a></li>
+                    <li class="menu__elem"><a href="franchisees.html" class="menu__link">Для франчайзи</a></li>
+                    <li class="menu__elem"><a href="blog.html" class="menu__link">Блог</a></li>
+                    <li class="menu__elem"><a href="contacts.html" class="menu__link">Контакты</a></li>
+                    <li class="menu__elem"><a href="faq.html" class="menu__link">FAQ</a></li>
                 </ul>
             </nav>
-            <a href="tel:88009999000" class="gradient-button header__button">
-                <span class="gradient-button__text">8-800-999-90-00</span>
+            <a href="tel:+79658297613" class="gradient-button header__button">
+                <span class="gradient-button__text">+7 (965) 829-76-13</span>
             </a>
             <button class="header__burger-button burger-button">
+                
                 <div class="burger-button__line"></div>
                 <div class="burger-button__line"></div>
                 <div class="burger-button__line"></div>
