--- a/src/html/map.html
+++ b/src/html/map.html
@@ -2,7 +2,7 @@
     <div class="map__container container">
         <div class="map__header">
             <h2 class="section-title map__title">Географическое расположения студий</h2>
-            <span class="section-title map__number">/02</span>
+            <span class="section-title map__number">@@number</span>
         </div>
         <div class="map__image-wrapper">
             @@include('../images/vector/map.svg')
