--- a/src/gallery-studios.html
+++ b/src/gallery-studios.html
@@ -6,7 +6,7 @@
   <body>
     @@include('html/header.html', {})
     <main class="main">
-        @@include('html/blog.html', {})
+        @@include('html/gallery-studios.html', {})
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
