--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -14,7 +14,7 @@
             </ul>
         </nav>
         <p class="footer__text">Студия EXCLUSIVE MODEL не предоставляет и не является посредником в предоставлении услуг интимного характера. Все общение виртуально и несет исключительно развлекательный характер. Для лиц старше 18 лет.</p>
-        <p class="footer__text">© 2012-2023 EXCLUSIVE MODEL | <a class="footer__link">Политика конфиденциальности</a></p>
+        <p class="footer__text">© 2012-2023 EXCLUSIVE MODEL | <a href="privacy.html" class="footer__link">Политика конфиденциальности</a></p>
     </div>
 </footer>
 
@@ -38,7 +38,7 @@
                 <span class="gradient-button__text">Заполнить анкету</span>
             </button>
             <p class="feedback__rights">
-                Заполняя форму на сайте, ты соглашаешься<br>с нашей <a class="feedback__rights" href="#">Политикой в отношении</a> обработки персональных данных
+                Заполняя форму на сайте, ты соглашаешься<br>с нашей <a class="feedback__rights" href="privacy.html">Политикой в отношении</a> обработки персональных данных
             </p>
         </form>
     </div>
