--- a/src/privacy.html
+++ b/src/privacy.html
@@ -6,7 +6,10 @@
   <body>
     @@include('html/header.html', {})
     <main class="main">
-        @@include('html/blog.html', {})
+      <div class="section-info container">
+        <h1 class="section-title">Политика конфиденциальности</h1>
+        <p class="section-text">Эта страница находится в разработке</p>
+      </div>
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
