--- a/src/article.html
+++ b/src/article.html
@@ -6,7 +6,7 @@
   <body>
     @@include('html/header.html', {})
     <main class="main">
-        @@include('html/blog.html', {})
+        @@include('html/article.html', {})
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
